[tool.poetry]
name = "stack-overflow-insights"
version = "0.1.0"
description = ""
authors = ["Filip Pastuszka <filippastuszkamf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
pyvis = "^0.3.2"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
